# netmet

./: .gitignore  pyproject.toml  test.txt
TP2/: main.py  main_correction.py
TP2/datasets/: fr_vps.json  ru_targets_correction.json  us_vps.json
TP2/results/: exo6_correction_61134204.json  exo6_correction_61134205.json  exo6_correction_61134206.json  results_exo5_correction.json
TP3/: main.py  main_correction.py
TP3/datasets/: ripe_vp_fr_correction.json  ripe_vp_us_correction.json  vps_correction.json
TP3/results/: measurement_results_fr_correction.json  measurement_results_us_correction.json  pings_fr_correction.json  pings_us_correction.json
TP4/: main.py  main_correction.py  show_results_on_map.ipynb
TP4/datasets/: validation_dataset.json  vps_correction.json
TP4/results/: geolocation_error_cbg_correction.json  geolocation_error_shortest_ping_correction.json  ping_measurement_description_correction.json  target_geolocation_cbg_correction.json  target_geolocation_shortest_ping_correction.json  vps_to_target_min_rtt_correction.json
TP5/: main.py  main_correction.py
TP5/datasets/: vps_correction.json
TP5/results/: dns_measurement_description_correction.json  dns_resolution_correction.json
common/: default.py  file_utils.py  geoloc.py
common/ripe/: utils.py
